Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5138

Numerous test failures in "mtr --ps --embedded"

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.4, 5.5.33, 5.1.67, 5.3.12
    • 5.5.38, 10.0.12
    • None
    • None

    Description

      "mtr --ps --embedded" fails on about a half of the tests.
      This is the end from its output:

      The servers were restarted 1364 times
      Spent 484.852 of 278 seconds executing testcases
      Completed: Failed 533/1306 tests, 59.19% were successful.

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 10d
                  10d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.