MDEV-5138 Numerous test failures in "mtr --ps --embedded".         The function Protocol::net_store_data(a, b, CHARSET_A, CHARSET_B) should         be adapted to be working in the embedded server as it's done         with the Protocol::net_store_data(a, b).         That new function renamed as net_store_data_cs, so we can make it         virtual.